Edit z-index to recent gallery fixed button to style.css to bring up to front

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1479,6 +1479,7 @@
 	transform: rotate(90deg);
 	margin: 0;
 	padding: 0;
+	z-index: 100;
 }
 
 .fixed-btn p {
